RESOLVED FIXED 280309
[Text Directionality] REGRESSION(282648@main): Updating the auto text directionality of the element's ancestors is very expensive
https://bugs.webkit.org/show_bug.cgi?id=280309
Summary [Text Directionality] REGRESSION(282648@main): Updating the auto text directi...
Said Abou-Hallawa
Reported 2024-09-24 17:32:29 PDT
If the body of a large web page has the following markup <body dir="auto">, loading this page will be very slow. The reason for this performance issue, all the nodes will traverse the DOM tree upwards when they are inserted in their anchors. This traversal is not needed if the dir attribute was not changed and the effective text directionality of the element is the same as the effective text directionality of its parent. In this case this element won't affect its ancestors.
Attachments
Said Abou-Hallawa
Comment 1 2024-09-24 17:32:54 PDT
Said Abou-Hallawa
Comment 2 2024-09-24 17:41:49 PDT
EWS
Comment 3 2024-09-27 00:36:35 PDT
Committed 284339@main (53c053e2da00): <https://commits.webkit.org/284339@main> Reviewed commits have been landed. Closing PR #34201 and removing active labels.
EWS
Comment 4 2024-10-01 11:36:32 PDT
Committed 283286.167@safari-7620-branch (0d89c31a0da4): <https://commits.webkit.org/283286.167@safari-7620-branch> Reviewed commits have been landed. Closing PR #1946 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.