[Text Directionality] REGRESSION(282648@main): Updating the auto text directionality of the element's ancestors is very expensive https://bugs.webkit.org/show_bug.cgi?id=280309 rdar://136385909

Reviewed by Ryosuke Niwa.

Skip updating the element's ancestors if the dir attribute was not changed and
its effective direction is the same as its parent's effective direction. This
element won't affect its ancestors' effective direction.

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::dirAttributeChanged):
* Source/WebCore/dom/ElementTextDirection.cpp:
(WebCore::updateEffectiveTextDirectionOfElementAndDescendants):
(WebCore::textDirectionStateChanged):
(WebCore::updateEffectiveTextDirectionState):
* Source/WebCore/dom/ElementTextDirection.h:

Canonical link: https://commits.webkit.org/284339@main